--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babili-webpack-plugin": "^0.1.1",
     "benchmark": "^2.1.2",
     "chalk": "^1.1.3",
+    "circular-json": "^0.5.1",
     "jasmine": "^2.5.1",
     "jsdom": "^9.5.0",
     "jsonfile": "^2.3.1",
